<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Authentication.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="390dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="154dp"
        app:cardCornerRadius="27dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="93dp"
                android:layout_height="52dp"

                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/log_in"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#38B6FF"
                android:textSize="30sp"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emaillayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                android:hint="@string/email"
                android:textColorHint="?android:attr/textColorHint"
                app:boxBackgroundColor="#FFFFFF"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:inputType="textEmailAddress"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                android:hint="@string/password"
                android:textColorHint="?android:attr/textColorHint"
                app:boxBackgroundColor="#FFFFFF"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lgnPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:inputType="textPassword"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/lgnForgotPass"
                android:layout_width="168dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/roboto_bold"
                android:onClick="resetPassword"
                android:text="@string/forget_password"
                android:textColor="#BDBDBD"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/restBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="Login"
                android:text="@string/login"
                app:cornerRadius="20dp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/lgnDonthavacc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/dont_account"
                    android:textColor="#38B6FF"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/lgnSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/lgnDonthavacc"
                    android:fontFamily="@font/roboto"
                    android:onClick="gotoSignUp"
                    android:text="@string/signup"
                    android:textColor="#BDBDBD"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

        <include
            layout="@layout/custom_progressbar"
            android:id="@+id/progBar"
            android:visibility="gone"
            />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>