<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Authentication.resetPasswordActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="270dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="211dp"
        app:cardCornerRadius="27dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:visibility="gone"
            android:id="@+id/resetEmailLayout">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emaillayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="14dp"
                android:hint="@string/email"
                android:textColorHint="?android:attr/textColorHint"
                app:boxBackgroundColor="#FFFFFF"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/restEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:inputType="textEmailAddress"
                    android:textSize="22sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/restBtn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:onClick="Reset"
                android:text="@string/reset_password"
                app:cornerRadius="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible"
            android:id="@+id/resetCounterLayout">

            <TextView
                android:id="@+id/messageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center_horizontal"
                android:textColor="#BDBDBD"
                android:textSize="15sp"
                tools:text="@string/Reset_Password_instructions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="60dp">

                <Button
                    android:id="@+id/retryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="@string/retry"
                    app:cornerRadius="20dp"/>

                <Button
                    android:id="@+id/closeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:onClick="btnClose"
                    android:text="@string/close"
                    app:cornerRadius="20dp"/>
            </LinearLayout>
        </LinearLayout>

        <include
            layout="@layout/custom_progressbar"
            android:id="@+id/progBar"
            android:visibility="gone"
            />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>