<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseBreakingSubsystem.HouseBreakingActivity"
    android:background="#71CBFF">

    <LinearLayout
        android:id="@+id/llDoor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/LockLayout"
                android:layout_width="53dp"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/circularlayout"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iVDoor"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_lock" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="50dp"
                android:layout_toEndOf="@+id/LockLayout"
                android:text="@string/door"
                android:textColor="#FFFFFF"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/DoorLocked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_toEndOf="@+id/LockLayout"
                android:text="@string/locked"
                android:textColor="#FFDE59"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/DoorState"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:onClick="openDoor"
            android:text="@string/open"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:onClick="closeDoor"
            android:text="@string/close"
            app:cornerRadius="20dp" />
    </LinearLayout>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llDoor" />

    <LinearLayout
        android:id="@+id/llFirstWin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view1">



    </LinearLayout>


    <LinearLayout
        android:id="@+id/llAlarm"
        android:layout_width="343dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/view1">

        <TextView
            android:id="@+id/AlarmView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/AlarmHouseswitch"
            android:layout_width="64dp"
            android:layout_height="38dp"
            android:layout_marginStart="170dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:theme="@style/SCBSwitch"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.778"
            app:layout_constraintStart_toEndOf="@+id/AlarmView" />
    </LinearLayout>
    <include
        layout="@layout/server_error"
        android:id="@+id/serverErr"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>